# holdem-cli

./: .gitignore  README.md  holdem  pyproject.toml
dev/: README.md
dev/demos/: demo_new_features.py
dev/scripts/: cleanup_summary.py  run_holdem.py
dev/testing/: performance_test.py  simple_test.py
docs/: QUICK_REFERENCE.md  index.md
docs/developer/: build.md  contributing.md  database.md  implementation.md  new-features.md  performance.md  prd.md  setup.md  style.md
docs/project/: changelog.md
docs/user/: commands.md  examples.md  guide.md  quick-start.md  troubleshooting.md
docs/user/quizzes/: hand-ranking.md  pot-odds.md  preflop.md
src/holdem_cli/: __init__.py  cli.py  main.py  tui.py  types.py
src/holdem_cli/charts/: __init__.py  app.py  app.py.backup  chart_cli.py  chart_tui.py  constants.py  gto_library.py  messages.py  quiz.py  refactored_app.py  test_widgets.py  utils.py  widgets.py
src/holdem_cli/charts/strategies/: base_strategy.py  chart_generator.py  opening_strategy.py  poker_knowledge.py
src/holdem_cli/charts/tui/core/: cache.py  (+5 more)
src/holdem_cli/charts/widgets/: __init__.py  dialogs.py  quiz_integration.py
src/holdem_cli/config/: __init__.py  config_manager.py  settings.py
src/holdem_cli/engine/: __init__.py  cards.py  equity.py
src/holdem_cli/models/: __init__.py  base.py  poker.py  quiz.py
src/holdem_cli/quiz/: __init__.py  hand_ranking.py  pot_odds.py  preflop.py
src/holdem_cli/services/: __init__.py  holdem_service.py  state_manager.py
src/holdem_cli/simulator/: __init__.py  ai_player.py  poker_simulator.py
src/holdem_cli/storage/: __init__.py  database.py  database_optimized.py
src/holdem_cli/utils/: error_boundary.py  error_handling.py  logging_utils.py  random_utils.py  validation_utils.py
tests/: __init__.py  pytest.ini  test_utils.py
tests/data/: test_export.json
tests/e2e/: test_tui.py
tests/integration/: test_basic.py  test_build.py  test_cli_integration.py  test_phase2.py  test_services_integration.py
tests/unit/: test_cards.py  test_equity.py
tools/: install_and_test.sh  setup.py  setup_dev.py
(+24 files in other folders)
