[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "holdem-cli"
version = "1.0.0"
description = "A unified terminal-based poker training tool for Texas Hold'em with mode selection interface, adaptive difficulty quizzes, AI simulations, equity calculations, and interactive charts"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Dylan Chidambaram", email = "dylan@example.com"}
]
maintainers = [
    {name = "Dylan Chidambaram", email = "dylan@example.com"}
]
keywords = ["poker", "cli", "training", "texas-holdem", "equity", "quiz", "simulation", "charts"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Environment :: Console",
]
dependencies = [
    "click>=8.0.0",
    "numpy>=1.20.0",
    "textual>=0.50.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.900",
]

[project.scripts]
holdem = "holdem_cli.main:main"

[project.urls]
Homepage = "https://github.com/dylanchid/holdem-cli"
Repository = "https://github.com/dylanchid/holdem-cli"
Issues = "https://github.com/dylanchid/holdem-cli/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
